testtask/src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import '~bootstrap/dist/css/bootstrap.min.css';

@import "styles/mixins";

.modal-content {
  max-width:960px;
}
.modal-dialog {
  max-width: 70%;

    @include breakpoint(xs) {
      margin: 20px auto;
    }

}
.modal-body{
  max-height: 400px;
  overflow-y: scroll;
}

.table-wrapper {
  @include breakpoint(sm) {
    overflow-x: scroll;
  }
  @include breakpoint(xs) {
    overflow-x: scroll;
    width: 100%;
  }
}

